; ModuleID = '/home/carl/AnghaBench/jq/src/extr_util.c_jq_realpath.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_util.c_jq_realpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i32 0, align 4
@_PC_PATH_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jq_realpath(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* null, i8** %5, align 8
  %7 = load i32, i32* @PATH_MAX, align 4
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = call i8* @jv_mem_alloc(i32 %11)
  store i8* %12, i8** %5, align 8
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @jv_string_value(i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @realpath(i32 %15, i8* %16)
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %13
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @free(i8* %21)
  %23 = load i32, i32* %3, align 4
  store i32 %23, i32* %2, align 4
  br label %32

24:                                               ; preds = %13
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @jv_free(i32 %25)
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @jv_string(i8* %27)
  store i32 %28, i32* %3, align 4
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @free(i8* %29)
  %31 = load i32, i32* %3, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %24, %20
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i8* @jv_mem_alloc(i32) #1

declare dso_local i8* @realpath(i32, i8*) #1

declare dso_local i32 @jv_string_value(i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @jv_free(i32) #1

declare dso_local i32 @jv_string(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
